feat: move impact calculations to backend
Align the calculation API with the frontend response model, enable CORS for the web app, and require a valid user token before saving or listing calculations.